@@ -8,13 +8,13 @@ XS-Python-Version: >= 2.5
 Build-Depends: apt-utils,
                cdbs,
                debhelper (>= 7),
-               libapt-pkg-dev (>= 0.7.22~),
+               libapt-pkg-dev (>= 0.7.12~),
                python-all-dbg (>= 2.5.4-3),
                python-all-dev (>= 2.5.4-3),
                python3.1-dev,
                python3.1-dbg,
                python-central (>= 0.5),
-               python-distutils-extra (>= 1.9.0),
+               python-distutils-extra (>= 2.0),
                python-gtk2,
                python-sphinx (>= 0.5),
                python-vte
