@@ -1,5 +1,4 @@
 README
 apt/README.apt
 data/templates/README.templates
-build/doc/html/
-build/doc/text/
+build/sphinx/html/
