@@ -38,6 +38,7 @@ python-apt (0.7.92) UNRELEASED; urgency=low
   * Upgrade to debhelper 7 and remove debian/tmp in python-apt.install, to
     work around a bug in debhelper.
   * Build-Depend on python-all-dev (>= 2.5.4-3), so we build for Python 2.6
+  * Simplify the whole building, build all Python versions with setup.py
 
   [ Sebastian Heinlein ]
   * apt/progress.py: Extract the package name from the status message
